Started to work

--- a/Bll.Interfaces/Bll.Interfaces.csproj
+++ b/Bll.Interfaces/Bll.Interfaces.csproj
@@ -40,7 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IAnswerService.cs" />
     <Compile Include="IProductBundleService.cs" />
+    <Compile Include="IProductService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
