--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -40,7 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnswerService.cs" />
+    <Compile Include="Extensions\ProductExtensions.cs" />
+    <Compile Include="Extensions\ProductBundleExtensions.cs" />
     <Compile Include="ProductBundleService.cs" />
+    <Compile Include="ProductService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RuleExecutor.cs" />
   </ItemGroup>
