--- a/BLL.Tests/BLL.Tests.csproj
+++ b/BLL.Tests/BLL.Tests.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="ProductBundleService.GetAnswers.Tests.cs" />
     <Compile Include="ProductBundleService.GetRecommendedBundle.Tests.cs" />
+    <Compile Include="ProductBundleService.ModifyBundle.Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rules\IncomeGt_0_Tests.cs" />
     <Compile Include="Rules\IncomeGt_12000_Tests.cs" />
